I added the lang data and provided the charset encoding

--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,8 @@
 <!Doctype html>
-<html>
+<html lang="en">
+<meta charset="UTF-8">
 <head>
+<h2>Welcome to Possibilities</h2>
 <title>Nothing Much</title>
 </head>
 </html>
